# clickhouse-mcp

./: .env.example  .gitignore  .gitleaks.toml  .markdownlint-cli2.jsonc  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CONTRIBUTING.md  README.md  README_zh.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: test.yml
docs/: REGISTER.md  RELEASE.md  SECURITY.md  THREAT_MODEL.md
src/clickhouse_mcp/: __init__.py  __main__.py  _platform.py  cache_backend.py  client.py  errors.py  models.py  server.py
src/clickhouse_mcp/tools/: __init__.py  _runtime.py  market.py  meta.py  rawsql.py
tests/: conftest.py  test_boundary.py  test_cache_backend.py  test_client.py  test_coverage_completion.py  test_errors.py  test_exception.py  test_models.py  test_owasp_2017.py  test_owasp_2021.py  test_owasp_2025.py  test_pentest.py  test_platform.py  test_runtime.py  test_server_integration.py  test_tools_unit.py
