[project]
name = "clickhouse-mcp"
version = "0.1.1"
description = "Read-only MCP server for querying a USA-market ClickHouse warehouse (1.49B-row 1m bars + materialised indicators) for large-scale quant analysis."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "kevinkda" }]
keywords = ["mcp", "clickhouse", "quant", "finance", "read-only", "ohlcv", "indicators"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]

dependencies = [
    "mcp>=1.6,<2.0",
    "clickhouse-connect>=0.7,<1",
    "pydantic>=2.6,<3",
    "python-dotenv>=1.0,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3,<10",
    "pytest-asyncio>=0.23,<2",
    "pytest-cov>=5.0,<8",
    "ruff>=0.6,<1",
    "mypy>=1.10,<2",
    "bandit>=1.7,<2",
    # pip is a build-time tool (not a runtime import); pinned to clear known
    # pip CVEs in the pip-audit CI gate. uv seeds pip into the venv, so
    # pip-audit scans it even though nothing imports pip at runtime.
    "pip>=26.1.2",
    "pip-audit>=2.7,<3",
    # Transitive-dependency CVE floors (pulled in indirectly, pinned here so
    # the pip-audit CI gate stays green without loosening runtime ranges):
    #   * pydantic-settings — pulled by `mcp`; >=2.14.2 clears GHSA-4xgf-cpjx-pc3j.
    #   * msgpack — pulled by `cachecontrol` (a pip-audit dep); >=1.2.1 clears
    #     GHSA-6v7p-g79w-8964.
    "pydantic-settings>=2.14.2",
    "msgpack>=1.2.1",
    "pre-commit>=3.7,<5",
    "detect-secrets>=1.5,<2",
    "hypothesis>=6.130,<7",
]

[project.scripts]
clickhouse-mcp = "clickhouse_mcp.server:main"

[project.urls]
Homepage = "https://github.com/kevinkda/clickhouse-mcp"
Issues = "https://github.com/kevinkda/clickhouse-mcp/issues"

[build-system]
requires = ["hatchling>=1.29.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/clickhouse_mcp"]

[tool.uv]
default-groups = []

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "9.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=src/clickhouse_mcp",
    "--cov-report=term-missing",
    "--cov-report=html",
]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "posix_only: test depends on POSIX file-permission semantics; skipped on Windows.",
]
filterwarnings = [
    "error",
]

# ---------------------------------------------------------------------------
# coverage
# ---------------------------------------------------------------------------
[tool.coverage.run]
branch = true
source = ["src/clickhouse_mcp"]
omit = [
    "src/clickhouse_mcp/__main__.py",
]

[tool.coverage.report]
exclude_also = [
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "pragma: no cover",
    "@(abc\\.)?abstractmethod",
]
fail_under = 100
show_missing = true
skip_covered = false

# ---------------------------------------------------------------------------
# ruff
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 120
target-version = "py311"
src = ["src", "tests"]
exclude = ["build", "dist", ".venv", "htmlcov"]

[tool.ruff.lint]
select = [
    "E", "W", "F", "I", "B", "C4", "UP", "SIM", "S",
    "RUF", "PL", "PIE", "PT", "RET", "TID", "ASYNC",
]
ignore = [
    "E501",
    "PLR0913",
    "PLR2004",
    "S101",
    "TID252",
    "PLC0415",
    "PT011",
    "B017",
    "PT006",
    "RET504",
    "S311",
    "PLW0603",
    "RUF012",
    "RUF059",
    "ASYNC240",
    "SIM105",
    "SIM117",
    "PT018",
    "PT019",
    "PLR0911",
    "PLR0915",
    "PLW0108",
    "S108",
    "S103",
    "S603",
    "S105",
    "UP042",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S105", "S106", "PLR2004", "PLR0913"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---------------------------------------------------------------------------
# mypy
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
warn_unreachable = true
pretty = true
show_error_codes = true
exclude = ["build/", "dist/", ".venv/", "htmlcov/"]

[[tool.mypy.overrides]]
module = ["mcp.*", "clickhouse_connect.*"]
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# bandit
# ---------------------------------------------------------------------------
[tool.bandit]
exclude_dirs = ["tests", "build", ".venv"]
skips = ["B101"]
